--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-asgiref==3.11.0
-dj-database-url==3.1.0
-Django==6.0.1
-django-cors-headers==4.9.0
-django-environ==0.12.0
-djangorestframework==3.16.1
-psycopg2-binary==2.9.11
-sqlparse==0.5.5
-tzdata==2025.3
+Django
+djangorestframework
+django-cors-headers
+gunicorn
+whitenoise
